# R1: https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml/
# R2: https://carpentries-incubator.github.io/python_packaging/instructor/03-building-and-installing.html

[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyamr"
version = "{{VERSION_PLACEHOLDER}}"
keywords = ["AMR"]
license = {text = "GPL-3.0-only"}         # option with fle ({file = "LICENSE.md"})

description = "A lightweight package to compute Antimicrobial Resistance (AMR) metrics."
readme = "README.md"

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

authors = [
    {name = "Bernard Hernandez", email = "b.hernandez-perez@imperial.ac.uk"}
]

#maintainers = [
#    {name = "Bernard Hernandez", email = "b.hernandez-perez@imperial.ac.uk"}
#]

dependencies = [
    "pandas",
    "numpy"
]


[project.urls]
Source = "https://github.com/bahp/pyamr/"
Documentation = "https://bahp.github.io/pyAMR/"
"Bug Tracker" = "https://github.com/bahp/pyAMR/issues"

[options]
include_package_data = true
packages = "find:"
#package_data
python_requires = ">=3.7"
install_requires = [
    "numpy",
    "pandas"
]

#[options.packages.find]
#exclude =

[project.optional-dependencies]
test = [
    "pytest >= 5.0.0",
]
doc = [
    "sphinx",
    "sphinx-gallery"
]
plot = [
    "seaborn",
    "matplotlib",
    "plotly"
]


#[tool.black]
#line-length = 120