[metadata]
name = pkgname
version = 0.0.1
description = A python package library template.
long_description = file: README.rst
url = https://www.example.com/
author = Bernard Hernandez
author_email = b.hernandez-perez@imperial.ac.uk
license = BSD-3-Clause  # Example license
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find: