[metadata]
name = pyamr
#version = attr: pyamr.__version__
version = 0.0.5
author = Bernard Hernandez
author_email = b.hernandez-perez@imperial.ac.uk
description = A python package library template.
long_description = file: README.rst
#keywords = antimicrobial resistance
url = https://bahp.github.io/pyAMR/
license = MIT  # Example license
readme = README.md
#requires-python = ">=3.6"
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[project.urls]
Documentation = https://bahp.github.io/pyAMR/
Bug Tracker = https://github.com/bahp/pyAMR/issues
Source code = https://github.com/bahp/pyamr/

[options]
include_package_data = true
packages = find:
#package_data
#python_requires = >=3.7
install_requires =
    numpy
    pandas

[options.packages.find]
exclude =
    examples*